[gd_scene load_steps=47 format=3 uid="uid://o2xxutubf1cq"]

[ext_resource type="Script" uid="uid://djhjrw4rqdd3o" path="res://Scripts/Player/Player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://cvt25fhbp2h8n" path="res://Sprites/Assets/Player/Antwon_Idle-Sheet.png" id="2_t26db"]
[ext_resource type="Texture2D" uid="uid://d3omwyj4byee2" path="res://Sprites/Placeholder/Placeholder Player/Jump.png" id="3_52ee3"]
[ext_resource type="Texture2D" uid="uid://dj2giutbr0uje" path="res://Sprites/Placeholder/Placeholder Player/Land on Ground.png" id="4_bhhdu"]
[ext_resource type="Texture2D" uid="uid://16h1ppvche01" path="res://Sprites/Placeholder/Placeholder Player/Sprint.png" id="5_megsn"]
[ext_resource type="Texture2D" uid="uid://dbk2xvwpypuev" path="res://Sprites/Placeholder/Placeholder Player/Walk.png" id="6_yoq75"]
[ext_resource type="Script" uid="uid://2lt7mkjpsbkp" path="res://Scripts/Player/health_manager.gd" id="7_52ee3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fk5o5"]
atlas = ExtResource("2_t26db")
region = Rect2(0, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_825xp"]
atlas = ExtResource("2_t26db")
region = Rect2(27, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji083"]
atlas = ExtResource("2_t26db")
region = Rect2(54, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kmp4"]
atlas = ExtResource("2_t26db")
region = Rect2(81, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5acl"]
atlas = ExtResource("2_t26db")
region = Rect2(108, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg6k"]
atlas = ExtResource("2_t26db")
region = Rect2(135, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u84n"]
atlas = ExtResource("2_t26db")
region = Rect2(162, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_esmjy"]
atlas = ExtResource("2_t26db")
region = Rect2(189, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tu5v"]
atlas = ExtResource("2_t26db")
region = Rect2(216, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_spxdj"]
atlas = ExtResource("2_t26db")
region = Rect2(243, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0objx"]
atlas = ExtResource("2_t26db")
region = Rect2(270, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w71ue"]
atlas = ExtResource("2_t26db")
region = Rect2(297, 0, 27, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("3_52ee3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("3_52ee3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("3_52ee3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("3_52ee3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("3_52ee3")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("4_bhhdu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("4_bhhdu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("4_bhhdu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("4_bhhdu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("5_megsn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("5_megsn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("5_megsn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("5_megsn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("5_megsn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("5_megsn")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("5_megsn")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("5_megsn")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("6_yoq75")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("6_yoq75")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("6_yoq75")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("6_yoq75")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("6_yoq75")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("6_yoq75")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("6_yoq75")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("6_yoq75")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_opqna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk5o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_825xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji083")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kmp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5acl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u84n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esmjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tu5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spxdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0objx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w71ue")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}],
"loop": false,
"name": &"Jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}],
"loop": true,
"name": &"Land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}],
"loop": true,
"name": &"Walk",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_00okb"]
radius = 7.0
height = 42.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_kyqiw")

[node name="Player Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(2.84217e-14, -21)
scale = Vector2(0.600001, 0.64)
sprite_frames = SubResource("SpriteFrames_opqna")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.445269

[node name="Player Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_00okb")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Knockback_Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="HealthTxt" type="Label" parent="."]
offset_left = -62.0
offset_top = -110.0
offset_right = -13.0
offset_bottom = -93.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="StaminaTxt" type="Label" parent="."]
offset_left = -62.0
offset_top = -93.0
offset_right = -4.0
offset_bottom = -76.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="FoodTxt" type="Label" parent="."]
offset_left = -62.0
offset_top = -76.0
offset_right = -4.0
offset_bottom = -59.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="HealthManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_52ee3")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Knockback_Timer" to="." method="_on_knockback_timer_timeout"]
